--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -6,6 +6,7 @@ html {
 
 /* Titles */
 h1 {
+    padding-top: 50px;
 	text-transform: uppercase;
 	position: relative;
 	z-index: 1;
@@ -13,7 +14,7 @@ h1 {
 
 h1, h2 { 
 	font-weight: normal; 
-  margin-top: 10px;
+  /*margin-top: 10px;*/
   margin-bottom: 10px;
 }
 
@@ -68,7 +69,7 @@ body > article, footer {
   display: block;
   max-width: 700px;
   margin: 40px auto auto 355px;
-  padding: 20px 80px 10px;
+  padding: 10px 80px 10px;
 }
 
 article ol.posts
@@ -127,7 +128,7 @@ aside {
   color: white;
   box-shadow: 0 0 3px black;
   text-align: center;
-  padding-top: 8%;
+  padding-top: 0%;
   background-size: cover;
 }
 
@@ -162,7 +163,7 @@ aside > h2 {
 #pheader {
 	position: absolute;
 	height: 100%;
-	width: 24rem;
+	width: 280px;
 	z-index: -1;
 }
 
